(library
 (name dnscrypt)
 (modules dnscrypt)
 (flags :standard -warn-error -3-26-27-32-48-58-60 -bin-annot -color always)
 (ocamlopt_flags :standard -O3)
 (libraries
  dns
  tweetnacl
  base64
  ; hacl (vbmithr's old bindings)
  ; hacl-star (new bindings from the hacl* project itself)
  ;mirage-crypto mirage-crypto-ec
  ))

(executable
 (name dig)
 (modules dig)
 (flags :standard -warn-error -3-26-27-32-48-58-60 -bin-annot -color always)
 (ocamlopt_flags :standard -O3 -ccopt -static)
 (libraries unix dnscrypt))
